# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

drake_cc_package_library(
    name = "learning",
    deps = [
        ":pomdp_diagram_builder",
        ":reward_system_interface",
        ":state_observer_interface",
    ],
)

drake_cc_library(
    name = "reward_system_interface",
    hdrs = ["reward_system_interface.h"],
    deps = [
        "//systems/framework",
    ],
)

drake_cc_library(
    name = "state_observer_interface",
    hdrs = ["state_observer_interface.h"],
    deps = [
        "//systems/framework",
    ],
)

drake_cc_library(
    name = "pomdp_diagram_builder",
    srcs = ["pomdp_diagram_builder.cc"],
    hdrs = ["pomdp_diagram_builder.h"],
    deps = [
        ":reward_system_interface",
        ":state_observer_interface",
        "//systems/framework",
        "//systems/primitives:adder",
        "//systems/primitives:multiplexer",
        "//systems/primitives:pass_through",
    ],
)

add_lint_tests()
