# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(default_visibility = ["//visibility:public"])

drake_cc_package_library(
    name = "learning",
    deps = [
        ":mdp_diagram",
        ":quadratic_reward",
        ":reward_system_interface",
        ":state_observer_interface",
    ],
)

drake_cc_library(
    name = "reward_system_interface",
    hdrs = ["reward_system_interface.h"],
    deps = [
        "//systems/framework",
    ],
)

drake_cc_library(
    name = "state_observer_interface",
    hdrs = ["state_observer_interface.h"],
    deps = [
        "//systems/framework",
    ],
)

drake_cc_library(
    name = "mdp_diagram",
    srcs = ["mdp_diagram.cc"],
    hdrs = ["mdp_diagram.h"],
    deps = [
        ":reward_system_interface",
        ":state_observer_interface",
        "//systems/framework",
        "//systems/primitives:adder",
        "//systems/primitives:multiplexer",
        "//systems/primitives:pass_through",
    ],
)

drake_cc_library(
    name = "quadratic_reward",
    srcs = ["quadratic_reward.cc"],
    hdrs = ["quadratic_reward.h"],
    deps = [
        ":reward_system_interface",
        "//systems/framework",
    ],
)

add_lint_tests()
